# helmsnake

./: Dockerfile  Dockerfile-1  Dockerfile-2  README.md  helmsnake.cabal  stack.yaml
src/: Main.hs
