name: helmsnake
version: 0.0.1
description: The game Snake implemented using the Helm game engine.
cabal-version: >=1.10

executable helmsnake
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: src

  build-depends:
    base >= 4 && < 5,
    linear >= 1 && < 2,
--    random == 1.*,
    helm
